# conceptor_toxicity_classification

./: .gitignore  .gitmodules  .pre-commit-config.yaml.optional  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
bachelor-thesis-meike/: calculate_mean_scores.py  conceptor_classification.py  create_plots.py  mean_activations.py  model_performance_summary.txt  optimal_settings.json  plot_mean_scores_per_model.py  plot_model_comparison.py  running_experiments.py  store_settings.py  train_dataset.json
bachelor-thesis-meike/datasets/: create_dataset_jigsaw.py
bachelor-thesis-meike/datasets/seed_12345/: test_dataset.json  train_dataset.json  train_dataset_non_toxic.json  train_dataset_toxic.json  validation_dataset.json
bachelor-thesis-meike/datasets/seed_1337/: test_dataset.json  train_dataset.json  train_dataset_non_toxic.json  train_dataset_toxic.json  validation_dataset.json
bachelor-thesis-meike/results (with stupid aperture decision)/: optimal_settings.json  peak_performance_analysis.json
datasets/: README.md  create_validation_split.py
examples/: __init__.py  complex_behavior.py  hooked_transformer_caching.py  hooked_transformer_steering.py  lm_eval_harness.py  run_simple_demo.py
local_datasets/: __init__.py  download_all.py
results/: README.md
scripts/: __init__.py  ab_test_steering.py  download_models.py  evaluate_open_ended.py  generate_steering_mechanism.py  open_ended_test_steering.py
src/hookedllm/: HookedLLM.py  __init__.py  steering_functions.py  utils.py
tests/: __init__.py  test_saveload.py  test_scripts.py
(+530 files in other folders)
